--- a/rest/Makefile
+++ b/rest/Makefile
@@ -1,4 +1,4 @@
-all: rest_service
+all: rest_service simple_server
 
 CFLAGS   = -ggdb -Wall
 
@@ -10,6 +10,9 @@ REST_LDFLAGS = -lorcania -lyder -lulfius
 
 rest_service: rest_service.c rest_service.h
 	gcc $(CFLAGS) -o rest_service.out rest_service.c $(REST_LDFLAGS) $(REST_INCLUDE) $(REST_LIBDIR)
+
+simple_server: simple_server.c
+	gcc $(CFLAGS) -o simple_server.out simple_server.c $(REST_LDFLAGS) $(REST_INCLUDE) $(REST_LIBDIR)
 
 clean:
 	-rm *.out
